create, edit, delete running with image and quantity

--- a/src/app/features/reserved-area/producer/coupon-create/coupon-create.component.scss
+++ b/src/app/features/reserved-area/producer/coupon-create/coupon-create.component.scss
@@ -13,3 +13,12 @@ div.wrapperDate {
 div.divDateTime {
   display: inline-block;
 }
+
+#div.row{
+  text-align: left !important;
+}
+
+#div.col-md-9{
+  display:inline-block;
+
+}
