--- a/src/app/features/reserved-area/producer/coupon-list/coupon-list.component.html
+++ b/src/app/features/reserved-area/producer/coupon-list/coupon-list.component.html
@@ -42,21 +42,25 @@
   </div>
 </div>-->
 
-
 <div class="card-deck">
   <div class="card" *ngFor="let coupon of couponArray">
+
     <img class="card-img-top" [src]="imageUrl(coupon.image)" alt="Card image cap">
     <div class="card-body">
       <h5 class="card-title">{{coupon.title}}</h5>
       <p class="card-text">{{coupon.description}}</p>
     </div>
-    <div class="card-footer">
+    <div class="card-footer text-center">
       <button type="button" class="btn btn-primary" (click)="onEdit(coupon)">Edit</button>
       <button type="button" class="btn btn-danger" (click)="onDelete(coupon.valueOf().id)">Delete</button>
-      <button type="button" class="btn btn-info ">Details</button>
+      <!--<button type="button" class="btn btn-info ">Details</button>-->
 
     </div>
 
     <div class="coupon-price">{{formatPrice(coupon.price)}}</div>
+    <!--<div  class="coupon-quantity">{{(getQuantity(coupon)!= null) ? getQuantity(coupon) : 1}} </div>-->
+    <div  class="coupon-quantity">{{coupon.quantity ? coupon.quantity: 1}} {{coupon.quantity ? 'Coupons': 'Coupon'}} </div>
+
+
   </div>
 </div>
