--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -168,3 +168,17 @@ angular-file-uploader div.container {
   color: white;
   text-shadow: 1px 1px 8px black;
 }
+
+.coupon-quantity {
+  position: center;
+  background-color: #bd0754;
+  border-radius: 0 0 0 0.20rem;
+  top: 0;
+  right: 0;
+  font-size: 1.25em;
+  font-weight: bold;
+  padding: 5px 10px;
+  color: white;
+  text-shadow: 1px 1px 8px black;
+  text-align: center;
+}
