--- a/src/app/features/reserved-area/producer/coupon-create/coupon-create.component.html
+++ b/src/app/features/reserved-area/producer/coupon-create/coupon-create.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="row">
-    <div class="col-md-8 offset-md-2 mt-1">
+    <div  class="col-md-10 offset-1">
       <div class="card mx-4">
         <div class="card-body p-4">
           <h1 class="text-center">Create</h1>
@@ -8,8 +8,8 @@
 
           <form [formGroup]="couponForm" (ngSubmit)="saveCoupon()">
             <div class="form-group row">
-              <label class="col-sm-3 col-form-label">Title</label>
-              <div class="col-sm-9">
+              <label class="col-sm-2 col-form-label">Title</label>
+              <div class="col-sm-10">
                 <!--<input value="{{couponPass.title}}" type="text" formControlName="title" class="form-control"-->
 
                 <input type="text" formControlName="title" class="form-control"
@@ -20,8 +20,8 @@
               </div>
             </div>
             <div class="form-group row">
-              <label class="col-sm-3 col-form-label">Description</label>
-              <div class="col-sm-9">
+              <label class="col-sm-2 col-form-label">Description</label>
+              <div class="col-sm-10">
                 <textarea type="text" formControlName="description" class="form-control"
                           [ngClass]="{ 'is-invalid': submitted && f.description.errors }"></textarea>
                 <div *ngIf="submitted && f.description.errors" class="invalid-feedback">
@@ -31,22 +31,22 @@
             </div>
 
             <div class="form-group row">
-              <label class="col-sm-3 col-form-label">Image</label>
-              <div class="col-sm-9">
+              <label class="col-sm-2 col-form-label">Image</label>
+              <div class="col-sm-10">
 
                 <input type="file" class="col-sm-6 p-0" formControlName="image" ng2FileSelect [uploader]="uploader"
                        [ngClass]="{ 'is-invalid': submitted && f.image.errors }"/>
 
                 <div *ngFor="let item of uploader.queue" class="col-sm-6 p-0 mr-0 float-right">
-                  <div><button type="button" class="btn btn-success btn-xs ml-1"
+                  <div><button type="button" class="btn btn-success btn-sm ml-1"
                           (click)="item.upload()" [disabled]="item.isReady || item.isUploading || item.isSuccess">
                         <span class="glyphicon glyphicon-upload"></span> Upload
                       </button>
-                      <button type="button" class="btn btn-warning btn-xs ml-1"
+                      <button type="button" class="btn btn-warning btn-sm ml-1"
                           (click)="item.cancel()" [disabled]="!item.isUploading">
                         <span class="glyphicon glyphicon-ban-circle"></span> Cancel
                       </button>
-                      <button type="button" class="btn btn-danger btn-xs ml-1"
+                      <button type="button" class="btn btn-danger btn-sm ml-1"
                           (click)="item.remove()">
                         <span class="glyphicon glyphicon-trash"></span> Remove
                       </button>
@@ -70,8 +70,8 @@
             </div>
 
             <div class="form-group row">
-              <label class="col-sm-3 col-form-label">Price</label>
-              <div class="col-sm-9">
+              <label class="col-sm-2 col-form-label">Price</label>
+              <div class="col-sm-10">
                 <input type="number" formControlName="price" class="form-control"
                        [ngClass]="{ 'is-invalid': submitted && f.price.errors }"/>
                 <div *ngIf="submitted && f.price.errors" class="invalid-feedback">
@@ -80,8 +80,8 @@
               </div>
             </div>
             <div class="form-group row">
-              <label class="col-sm-3 col-form-label">Valid from</label>
-              <div class="col-sm-9">
+              <label class="col-sm-2 col-form-label">Valid from</label>
+              <div class="col-sm-10">
                 <input  type="datetime-local" formControlName="valid_from" class="form-control"
                        [ngClass]="{ 'is-invalid': submitted && f.valid_from.errors }"/>
                 <div *ngIf="submitted && f.valid_from.errors " class="invalid-feedback">
@@ -105,8 +105,8 @@
               </div>
             </div>
             <div class="form-group row">
-              <label class="col-sm-3 col-form-label">Constraints</label>
-              <div class="col-sm-9">
+              <label class="col-sm-2 col-form-label">Constraints</label>
+              <div class="col-sm-10">
                 <input type="text" formControlName="constraints" class="form-control"
                        [ngClass]="{ 'is-invalid': submitted && f.constraints.errors }"/>
                 <div *ngIf="submitted && f.constraints.errors" class="invalid-feedback">
@@ -116,8 +116,8 @@
             </div>
 
             <div class="form-group row">
-              <label class="col-sm-3 col-form-label">Quantity</label>
-              <div class="col-sm-9">
+              <label class="col-sm-2 col-form-label">Quantity</label>
+              <div class="col-sm-10">
                 <input type="number" formControlName="quantity" class="form-control"
                        [ngClass]="{ 'is-invalid': submitted && f.quantity.errors }"/>
                 <div *ngIf="submitted && f.quantity.errors" class="invalid-feedback">
