--- a/src/app/features/reserved-area/producer/coupon-edit/coupon-edit.component.scss
+++ b/src/app/features/reserved-area/producer/coupon-edit/coupon-edit.component.scss
@@ -7,3 +7,28 @@
   max-width: 100%;
   max-height: 100%;
 }
+
+label{
+  color: #20a8d8 !important;
+  padding-top: 10px;
+}
+
+p{
+  padding-top: 30px !important;
+}
+
+div.wrapperDate {
+  text-align: center;
+}
+div.divDateTime {
+  display: inline-block;
+}
+
+#div.row{
+  text-align: left !important;
+}
+
+#div.col-md-9{
+  display:inline-block;
+
+}
