create list with image, add checkbox for price 0

--- a/src/app/features/reserved-area/producer/coupon-list/coupon-list.component.css
+++ b/src/app/features/reserved-area/producer/coupon-list/coupon-list.component.css
@@ -1,12 +1,4 @@
-s{
-  overflow: hidden;
-  text-overflow: ellipsis;
-  white-space: nowrap;
-  height: 3.6em;
-  display: -webkit-box;
-  -webkit-line-clamp: 10;
-  -webkit-box-orient: vertical;
-
+th{
 
 }
 
