--- a/src/app/features/reserved-area/producer/coupon-edit/coupon-edit.component.html
+++ b/src/app/features/reserved-area/producer/coupon-edit/coupon-edit.component.html
@@ -78,11 +78,15 @@
 
 
             <div class="form-group row">
-              <label class="col-sm-2 col-form-label">Price:</label>
-              <div class="col-sm-10">
-                <input type="number" formControlName="price" class="form-control"
+              <label class="col-sm-3 col-form-label">Price</label>
+              <div class="form-check col-sm-2">
+                <input type="checkbox" class="form-check-input" id="check2"  data-md-icheck (change)="toggleVisibility2($event)">
+                <label class="form-check-label" for="check2">Free</label>
+              </div>
+              <div class="col-sm-7">
+                <input [readonly]="marked2" type="number" formControlName="price" class="form-control"
                        [ngClass]="{ 'is-invalid': submitted && f.price.errors }"/>
-                <div *ngIf="submitted && f.price.errors" class="invalid-feedback" >
+                <div *ngIf="submitted && f.price.errors" class="invalid-feedback">
                   <div *ngIf="f.price.errors">Value required</div>
                 </div>
               </div>
