--- a/src/app/core/sidebar/sidebar.component.html
+++ b/src/app/core/sidebar/sidebar.component.html
@@ -26,6 +26,10 @@
         <a [routerLink]="['/reserved-area/producer/create']" class="list-group-item list-group-item-action text-white">
           <span class="menu-collapsed">Create Coupon</span>
         </a>
+        <a [routerLink]="['/reserved-area/producer/report']" class="list-group-item list-group-item-action text-white">
+          <span class="menu-collapsed">Report Coupons</span>
+        </a>
+
       </div>
 
       <div *ngIf="this.userType == '2' || this.userType == '0'">
