--- a/src/app/features/reserved-area/producer/coupon-edit/coupon-edit.component.html
+++ b/src/app/features/reserved-area/producer/coupon-edit/coupon-edit.component.html
@@ -8,23 +8,23 @@
 
           <form [formGroup]="couponForm" (ngSubmit)="saveChange()">
             <div class="form-group row">
-              <label  class="col-sm-2 col-form-label">Title</label>
+              <label class="col-sm-2 col-form-label">Title</label>
               <div class="col-sm-10">
                 <!--<input value="{{couponPass.title}}" type="text" formControlName="title" class="form-control"-->
 
-                <input  type="text" formControlName="title" class="form-control"
-                        [ngClass]="{ 'is-invalid': submitted && f.title.errors }"/>
-                <div *ngIf="submitted && f.title.errors" class="invalid-feedback" >
+                <input type="text" formControlName="title" class="form-control"
+                       [ngClass]="{ 'is-invalid': submitted && f.title.errors }"/>
+                <div *ngIf="submitted && f.title.errors" class="invalid-feedback">
                   <div *ngIf="f.title.errors">Title is required, Maximum 40 character</div>
                 </div>
               </div>
             </div>
             <div class="form-group row">
-              <label  class="col-sm-2 col-form-label">Description:</label>
+              <label class="col-sm-2 col-form-label">Description:</label>
               <div class="col-sm-10">
                 <textarea type="text" formControlName="description" class="form-control"
                           [ngClass]="{ 'is-invalid': submitted && f.description.errors }"></textarea>
-                <div *ngIf="submitted && f.description.errors" class="invalid-feedback" >
+                <div *ngIf="submitted && f.description.errors" class="invalid-feedback">
                   <div *ngIf="f.description.errors">Description is required, Maximum 200 character</div>
                 </div>
               </div>
@@ -38,14 +38,15 @@
                   <img src={{URLstring}}>
                 </div>
 
-                <input type="file"  class="col-sm-6 p-0" formControlName="image" ng2FileSelect [uploader]="uploader"
+                <input type="file" class="col-sm-6 p-0" formControlName="image" ng2FileSelect [uploader]="uploader"
                        [ngClass]="{ 'is-invalid': submitted && f.image.errors }"/>
 
                 <div *ngFor="let item of uploader.queue" class="col-sm-6 p-0 mr-0 float-right">
-                  <div><button type="button" class="btn btn-success btn-sm ml-1"
-                               (click)="item.upload()" [disabled]="item.isReady || item.isUploading || item.isSuccess">
-                    <span class="glyphicon glyphicon-upload"></span> Upload
-                  </button>
+                  <div>
+                    <button type="button" class="btn btn-success btn-sm ml-1"
+                            (click)="item.upload()" [disabled]="item.isReady || item.isUploading || item.isSuccess">
+                      <span class="glyphicon glyphicon-upload"></span> Upload
+                    </button>
                     <button type="button" class="btn btn-warning btn-sm ml-1"
                             (click)="item.cancel()" [disabled]="!item.isUploading">
                       <span class="glyphicon glyphicon-ban-circle"></span> Cancel
@@ -73,17 +74,16 @@
               </div>
             </div>
 
-
-
-
-
             <div class="form-group row">
-              <label class="col-sm-3 col-form-label">Price</label>
-              <div class="form-check col-sm-2">
-                <input type="checkbox" class="form-check-input" id="check2"  data-md-icheck (change)="toggleVisibility2($event)">
-                <label class="form-check-label" for="check2">Free</label>
+              <label class="col-sm-2 col-form-label">Price</label>
+              <div class="col-sm-2">
+                <div class="form-check">
+                  <input type="checkbox" class="form-check-input" id="check2" data-md-icheck
+                         (change)="toggleVisibility2($event)">
+                  <label class="form-check-label" for="check2">Free</label>
+                </div>
               </div>
-              <div class="col-sm-7">
+              <div class="col-sm-8">
                 <input [readonly]="marked2" type="number" formControlName="price" class="form-control"
                        [ngClass]="{ 'is-invalid': submitted && f.price.errors }"/>
                 <div *ngIf="submitted && f.price.errors" class="invalid-feedback">
@@ -92,25 +92,28 @@
               </div>
             </div>
             <div class="form-group row">
-              <label class="col-sm-2 col-form-label">Validity from:</label>
+              <label class="col-sm-2 col-form-label">Valid From:</label>
               <div class="col-sm-10">
-                <input  value=''  type="datetime-local"  formControlName="valid_from" class="form-control"
-                        [ngClass]="{ 'is-invalid': submitted && f.valid_from.errors }"/>
-                <div *ngIf="submitted && f.valid_from.errors " class="invalid-feedback" >
+                <input value='' type="datetime-local" formControlName="valid_from" class="form-control"
+                       [ngClass]="{ 'is-invalid': submitted && f.valid_from.errors }"/>
+                <div *ngIf="submitted && f.valid_from.errors " class="invalid-feedback">
                   <div *ngIf=" f.valid_from.errors ">Date or time is incorrect</div>
                 </div>
               </div>
             </div>
 
             <div class="form-group row">
-              <label class="col-sm-3 col-form-label">Validity until:</label>
-              <div class="form-check col-sm-2">
-                <input type="checkbox" class="form-check-input" id="check1"  data-md-icheck (change)="toggleVisibility($event)">
-                <label class="form-check-label" for="check1">Unlimited</label>
+              <label class="col-sm-2 col-form-label">Valid Until:</label>
+              <div class="col-sm-2">
+                <div class="form-check">
+                  <input type="checkbox" class="form-check-input" id="check1" data-md-icheck
+                         (change)="toggleVisibility($event)">
+                  <label class="form-check-label" for="check1">Unlimited</label>
+                </div>
               </div>
-              <div class="col-sm-7">
-                <input   [readonly]="marked"  type="datetime-local" formControlName="valid_until" class="form-control"
-                         [ngClass]="{ 'is-invalid': submitted && f.valid_until.errors }"/>
+              <div class="col-sm-8">
+                <input [readonly]="marked" type="datetime-local" formControlName="valid_until" class="form-control"
+                       [ngClass]="{ 'is-invalid': submitted && f.valid_until.errors }"/>
                 <div *ngIf="submitted && f.valid_until.errors" class="invalid-feedback">
                   <div *ngIf="f.valid_until.errors">Date or time is incorrect</div>
                 </div>
@@ -121,7 +124,7 @@
               <div class="col-sm-10">
                 <input type="text" formControlName="constraints" class="form-control"
                        [ngClass]="{ 'is-invalid': submitted && f.constraints.errors }"/>
-                <div *ngIf="submitted && f.constraints.errors" class="invalid-feedback" >
+                <div *ngIf="submitted && f.constraints.errors" class="invalid-feedback">
                   <div *ngIf="f.constraints.errors">Value required</div>
                 </div>
               </div>
@@ -137,22 +140,23 @@
                 </div>
               </div>
             </div>
+
             <div class="alert alert-danger col-md-12"
-                 *ngIf="submitted && f.valid_from.errors?.MatchDate">time passed!!!
+                 *ngIf="submitted && f.valid_from.errors?.MatchDate">The date inserted in Valid From is already past!
             </div>
             <div class="alert alert-danger col-md-12"
-                 *ngIf="submitted && f.valid_until.errors?.MatchDateFromUntil">Data Until lower to Data From
+                 *ngIf="submitted && f.valid_until.errors?.MatchDateFromUntil">Data Until is lower than Data From
             </div>
 
             <!--<div class="alert alert-danger col-md-12" *ngIf="submitted && f.image.errors?.NoPath">-->
-              <!--Please upload an image before create the coupon.-->
+            <!--Please upload an image before create the coupon.-->
             <!--</div>-->
             <div class="alert alert-danger col-md-12"
                  *ngIf="submitted && f.valid_until.errors?.MatchQuantity">Quantity incorrect.
             </div>
             <div class="form group">
               <p>
-                <button  class="btn btn-block btn-success">Save change</button>
+                <button class="btn btn-block btn-success">Save change</button>
               </p>
             </div>
 
@@ -161,7 +165,6 @@
         </div>
 
       </div>
-
 
 
     </div>
