--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -10,7 +10,7 @@
   width: 100%;
   height: 60px;
   line-height: 60px;
-  background-color: #f5f5f5;
+  background-color: white;
 }
 
 .nav-item .nav-link > .img-avatar, .nav-item .avatar.nav-link > img {
@@ -20,6 +20,7 @@
 
 body {
   padding-top: 56px;
+  background-color: #f1f2f3!important;
 }
 
 .sticky-offset {
@@ -181,4 +182,31 @@ angular-file-uploader div.container {
   color: white;
   text-shadow: 1px 1px 8px black;
   text-align: center;
+}
+
+// Table Format Coupon list
+.table thead th {
+  font-size: 18px;
+}
+
+.table tbody tr {
+  font-size: 16px;
+}
+
+.table-striped > tbody > tr:nth-child(2n+1) > td, .table-striped > tbody > tr:nth-child(2n+1) > th {
+  background-color: #F4FBFE;
+}
+
+table {
+  background-color: white!important;
+  border: 1px solid #778899;
+}
+
+.form-check {
+  padding-top: 10px;
+
+  .form-check-label {
+    padding-top: 0!important;
+    color: black!important;
+  }
 }
