--- a/src/app/features/reserved-area/producer/coupon-create/coupon-create.component.html
+++ b/src/app/features/reserved-area/producer/coupon-create/coupon-create.component.html
@@ -133,7 +133,7 @@
               <label class="col-sm-2 col-form-label">Quantity</label>
               <div class="col-sm-10">
                 <input type="number" formControlName="quantity" class="form-control"
-                       [ngClass]="{ 'is-invalid': submitted && f.quantity.errors }"/>
+                       [ngClass]="{ 'is-invalid': submitted && f.quantity.errors }" min="1" max="1"/>
                 <div *ngIf="submitted && f.quantity.errors" class="invalid-feedback">
                   <div *ngIf="f.quantity.errors">Value required or incorrect</div>
                 </div>
