--- a/src/app/features/reserved-area/consumer/coupon-showcase/coupon-showcase.component.html
+++ b/src/app/features/reserved-area/consumer/coupon-showcase/coupon-showcase.component.html
@@ -7,8 +7,8 @@
         <p class="card-text">{{coupon.description}}</p>
       </div>
       <div class="card-footer">
-        <button type="button" class="btn btn-success float-right ml-1">Buy</button>
-        <button type="button" class="btn btn-info text-white float-right">Details</button>
+        <button type="button" class="btn btn-success float-right ml-1" (click)="buy(coupon)">Buy</button>
+        <button type="button" class="btn btn-info text-white float-right" (click)="details(coupon)">Details</button>
       </div>
 
       <div class="coupon-price">{{formatPrice(coupon.price)}}</div>
