Consumer can buy the coupon and watch the list of his coupons

--- a/src/app/core/sidebar/sidebar.component.html
+++ b/src/app/core/sidebar/sidebar.component.html
@@ -36,6 +36,9 @@
         <a [routerLink]="['/reserved-area/consumer/showcase']" class="list-group-item list-group-item-action text-white">
           <span class="menu-collapsed">Coupon Showcase</span>
         </a>
+        <a [routerLink]="['/reserved-area/consumer/bought']" class="list-group-item list-group-item-action text-white">
+          <span class="menu-collapsed">My Coupons</span>
+        </a>
       </div>
 
       <a class="list-group-item list-group-item-action text-secondary">
