--- a/src/app/features/reserved-area/consumer/coupon-showcase/coupon-showcase.component.html
+++ b/src/app/features/reserved-area/consumer/coupon-showcase/coupon-showcase.component.html
@@ -7,11 +7,30 @@
         <p class="card-text">{{coupon.description}}</p>
       </div>
       <div class="card-footer">
-        <button type="button" class="btn btn-success float-right ml-1">Buy</button>
+        <button type="button" (click)="openModal(template)" class="btn btn-success float-right ml-1">Buy</button>
         <button type="button" class="btn btn-info text-white float-right">Details</button>
       </div>
 
       <div class="coupon-price">{{formatPrice(coupon.price)}}</div>
+
+      <ng-template #template>
+        <div class="modal-header">
+          <h4 class="modal-title pull-left">Coupon delete</h4>
+          <button type="button" class="close pull-right" aria-label="Close" (click)="modalRef.hide()">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+
+        <div class="modal-body">
+          Are you sure you want to buy this coupon? This operation is not reversable!
+        </div>
+
+        <div class="modal-footer">
+          <button type="button" class="btn btn-success" (click)="buyCoupon(coupon.id)">Yes</button>
+          <button type="button" class="btn btn-danger" (click)="decline()">No</button>
+        </div>
+      </ng-template>
+
     </div>
   </div>
 </div>
