--- a/src/app/features/reserved-area/producer/coupon-create/coupon-create.component.html
+++ b/src/app/features/reserved-area/producer/coupon-create/coupon-create.component.html
@@ -120,8 +120,15 @@
 
             <div class="form-group row">
               <label class="col-sm-2 col-form-label">Constraints</label>
-              <div class="col-sm-10">
-                <input type="text" formControlName="constraints" class="form-control"
+              <div class="col-sm-2">
+                <div class="form-check">
+                  <input type="checkbox" class="form-check-input" id="check3" data-md-icheck
+                         (change)="toggleVisibility3($event)">
+                  <label class="form-check-label" for="check1">None</label>
+                </div>
+              </div>
+              <div class="col-sm-8">
+                <input [readonly]="marked3" type="text" formControlName="constraints" class="form-control"
                        [ngClass]="{ 'is-invalid': submitted && f.constraints.errors }"/>
                 <div *ngIf="submitted && f.constraints.errors" class="invalid-feedback">
                   <div *ngIf="f.constraints.errors">Value required</div>
