--- a/src/app/features/reserved-area/producer/coupon-list/coupon-list.component.css
+++ b/src/app/features/reserved-area/producer/coupon-list/coupon-list.component.css
@@ -2,6 +2,17 @@ th{
 
 }
 
+.crop {
+  width: 100%;
+  height: 70px;
+  overflow: hidden !important;
+}
+
+
+.centered-and-cropped { object-fit: cover }
+
+
+
 p{
   display: block;
   max-width: 400px;
