--- a/src/app/features/reserved-area/producer/coupon-list/coupon-list.component.html
+++ b/src/app/features/reserved-area/producer/coupon-list/coupon-list.component.html
@@ -19,7 +19,7 @@
         <i style="color: #999; font-size: 15px;">{{coupon.description}}</i>
       </td>
       <td>
-        <img class="img-thumbnail" style="width: 100%;" [src]="imageUrl(coupon.image)" alt="Card image cap">
+        <img class="img-thumbnail crop centered-and-cropped"   [src]="imageUrl(coupon.image)" alt="Card image cap">
       </td>
       <!--<td>{{coupon.price != 0 ? coupon.price : 'free'}}</td>-->
       <td>{{formatPrice(coupon.price)}}</td>
