--- a/src/app/features/reserved-area/consumer/coupon-showcase/coupon-showcase.component.html
+++ b/src/app/features/reserved-area/consumer/coupon-showcase/coupon-showcase.component.html
@@ -7,29 +7,31 @@
         <p class="card-text">{{coupon.description}}</p>
       </div>
       <div class="card-footer">
-        <button type="button" class="btn btn-success float-right ml-1" (click)="buy(coupon)">Buy</button>
+        <button type="button" class="btn btn-success float-right ml-1" (click)="openModal(template)">Buy</button>
         <button type="button" class="btn btn-info text-white float-right" (click)="details(coupon)">Details</button>
       </div>
 
       <div class="coupon-price">{{formatPrice(coupon.price)}}</div>
+
+      <ng-template #template>
+        <div class="modal-header">
+          <h4 class="modal-title pull-left">Buy Coupon</h4>
+          <button type="button" class="close pull-right" aria-label="Close" (click)="modalRef.hide()">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+
+        <div class="modal-body">
+          Confirm buy Coupon?
+        </div>
+
+        <div class="modal-footer">
+          <button type="button" class="btn btn-danger" (click)="decline()">No</button>
+          <button type="button" class="btn btn-success" (click)="buyCoupon(coupon.id)">Yes</button>
+        </div>
+      </ng-template>
     </div>
   </div>
 </div>
-<ng-template #template>
-  <div class="modal-header">
-    <h4 class="modal-title pull-left">Buy Coupon</h4>
-    <button type="button" class="close pull-right" aria-label="Close" (click)="modalRef.hide()">
-      <span aria-hidden="true">&times;</span>
-    </button>
-  </div>
 
-  <div class="modal-body">
-    Confirm buy Coupon?
-  </div>
-
-  <div class="modal-footer">
-    <button type="button" class="btn btn-danger" (click)="decline()">No</button>
-    <button type="button" class="btn btn-success" (click)="buy()">Yes</button>
-  </div>
-</ng-template>
 
