--- a/src/app/core/sidebar/sidebar.component.html
+++ b/src/app/core/sidebar/sidebar.component.html
@@ -2,15 +2,15 @@
   <ul class="list-group sticky-top sticky-offset">
     <!-- Separator with title -->
     <li class="list-group-item sidebar-separator-title text-white d-flex align-items-center menu-collapsed">
-      <small class="font-weight-bold">MAIN MENU</small>
+      <small class="font-weight-bold">SIDEBAR</small>
     </li>
     <!-- /END Separator -->
     <!-- Menu with submenu -->
     <a href="#submenu1" data-toggle="collapse" aria-expanded="false"
        class="list-group-item list-group-item-action flex-column align-items-start">
       <div class="d-flex w-100 justify-content-start align-items-center">
-        <span class="fas fa-tachometer-alt mr-3"></span>
-        <span class="menu-collapsed">Reserved Area</span>
+        <span class="fas fa-archway mr-3"></span>
+        <span class="menu-collapsed">Main menu</span>
         <span class="fas fa-plus ml-auto"></span>
       </div>
     </a>
@@ -21,23 +21,23 @@
 
       <div *ngIf="this.userType == '1' || this.userType == '0'">
         <a [routerLink]="['/reserved-area/producer/list']" class="list-group-item list-group-item-action text-white">
-          <span class="menu-collapsed">Coupon List</span>
+          <span class="menu-collapsed">My coupons</span>
         </a>
         <a [routerLink]="['/reserved-area/producer/create']" class="list-group-item list-group-item-action text-white">
-          <span class="menu-collapsed">Create Coupon</span>
+          <span class="menu-collapsed">Add new coupon</span>
         </a>
         <a [routerLink]="['/reserved-area/producer/report']" class="list-group-item list-group-item-action text-white">
-          <span class="menu-collapsed">Report Coupons</span>
+          <span class="menu-collapsed">Reports</span>
         </a>
 
       </div>
 
       <div *ngIf="this.userType == '2' || this.userType == '0'">
         <a [routerLink]="['/reserved-area/consumer/showcase']" class="list-group-item list-group-item-action text-white">
-          <span class="menu-collapsed">Coupon Showcase</span>
+          <span class="menu-collapsed">Shopping</span>
         </a>
         <a [routerLink]="['/reserved-area/consumer/bought']" class="list-group-item list-group-item-action text-white">
-          <span class="menu-collapsed">My Coupons</span>
+          <span class="menu-collapsed">My purchases</span>
         </a>
       </div>
 
@@ -51,17 +51,23 @@
        class="list-group-item list-group-item-action flex-column align-items-start">
       <div class="d-flex w-100 justify-content-start align-items-center">
         <span class="fa fa-user fa-fw mr-3"></span>
-        <span class="menu-collapsed">Profile</span>
+        <span class="menu-collapsed">Account</span>
         <span class="fas fa-plus ml-auto"></span>
       </div>
     </a>
     <!-- Submenu content -->
     <div id="submenu2" class="collapse sidebar-submenu">
       <a class="list-group-item list-group-item-action text-secondary">
+        <span class="menu-collapsed">Personal info</span>
+      </a>
+      <a class="list-group-item list-group-item-action text-secondary">
         <span class="menu-collapsed">Settings</span>
       </a>
       <a class="list-group-item list-group-item-action text-secondary">
-        <span class="menu-collapsed">Password</span>
+        <span class="menu-collapsed">Payment details</span>
+      </a>
+      <a class="list-group-item list-group-item-action text-secondary">
+        <span class="menu-collapsed">Receipts</span>
       </a>
     </div>
     <!-- Separator without title -->
@@ -73,10 +79,10 @@
         <span class="menu-collapsed text-secondary">Help</span>
       </div>
     </a>
-    <a data-toggle="sidebar-colapse"
+    <a data-toggle="sidebar-collapse"
        class="list-group-item list-group-item-action d-flex align-items-center">
       <div class="d-flex w-100 justify-content-start align-items-center">
-        <span id="collapse-icon" class="fa fa-2x mr-3"></span>
+        <span id="collapse-icon" class="fa arrow-left mr-3"></span>
         <span id="collapse-text" class="menu-collapsed text-secondary">Collapse</span>
       </div>
     </a>
