--- a/src/app/core/sidebar/sidebar.component.html
+++ b/src/app/core/sidebar/sidebar.component.html
@@ -82,7 +82,7 @@
     <a data-toggle="sidebar-collapse"
        class="list-group-item list-group-item-action d-flex align-items-center">
       <div class="d-flex w-100 justify-content-start align-items-center">
-        <span id="collapse-icon" class="fa arrow-left mr-3"></span>
+        <span id="collapse-icon" class="fa fa-arrow-left fa-fw mr-3"></span>
         <span id="collapse-text" class="menu-collapsed text-secondary">Collapse</span>
       </div>
     </a>
