--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -25,8 +25,9 @@
         <li class="nav-item dropdown">
           <a class="nav-link nav-link" data-toggle="dropdown" href="#" role="button" aria-haspopup="true"
              aria-expanded="false">
-            <i class="fa fa-2x fa-user-tie"></i>
-            <!--<img class="img-avatar" src="assets/img/avatars/6.jpg" alt="admin@bootstrapmaster.com">-->
+            <i>Welcome back, <b>{{username}}</b>!</i>
+            <!--<i class="fa fa-2x fa-user-tie"></i>-->
+            <img class="img-avatar" src="assets/img/avatars/8.jpg" alt="{{username}}">
           </a>
           <div class="dropdown-menu dropdown-menu-right">
             <div class="dropdown-header text-center">
