--- a/src/app/features/reserved-area/consumer/coupon-details/coupon-details.component.html
+++ b/src/app/features/reserved-area/consumer/coupon-details/coupon-details.component.html
@@ -3,6 +3,7 @@
     <div class="col-md-10 offset-1">
       <div class="card mx-4">
         <div class="card-body p-4">
+          <h3 class="">{{couponPass.title}}</h3>
           <div id="yourImage">
             <img src={{URLstring}}>
           </div>
