--- a/src/app/features/reserved-area/producer/coupon-create/coupon-create.component.html
+++ b/src/app/features/reserved-area/producer/coupon-create/coupon-create.component.html
@@ -3,8 +3,8 @@
     <div class="col-md-10 offset-1">
       <div class="card mx-4">
         <div class="card-body p-4">
-          <h1 class="text-center">Create</h1>
-          <h4 class="text-muted text-center">Create Coupon</h4>
+          <h1 class="text-left">Add new coupon</h1>
+          <h4 class="text-muted text-left mb-5">Fill the form:</h4>
 
           <form [formGroup]="couponForm" (ngSubmit)="saveCoupon()">
             <div class="form-group row">
@@ -101,7 +101,7 @@
             </div>
 
             <div class="form-group row">
-              <label class="col-sm-2 col-form-label">Valid Until:</label>
+              <label class="col-sm-2 col-form-label">Valid until</label>
               <div class="col-sm-2">
                 <div class="form-check">
                   <input type="checkbox" class="form-check-input" id="check1" data-md-icheck
