--- a/src/app/features/reserved-area/consumer/coupon-showcase/coupon-showcase.component.html
+++ b/src/app/features/reserved-area/consumer/coupon-showcase/coupon-showcase.component.html
@@ -1,37 +1,39 @@
-<div class="card-block">
+<!--<div class="card-block">-->
   <div class="row">
-    <div class="card col-md-4 col-sm-6" *ngFor="let coupon of coupons">
-      <img class="card-img-top" [src]="imageUrl(coupon.image)" alt="Card image cap">
-      <div class="card-body">
-        <h5 class="card-title">{{coupon.title}}</h5>
-        <p class="card-text">{{coupon.description}}</p>
+    <div class="col-md-4 col-sm-6" *ngFor="let coupon of coupons">
+      <div class="card">
+        <img class="card-img-top" [src]="imageUrl(coupon.image)" alt="Card image cap">
+        <div class="card-body">
+          <h5 class="card-title">{{coupon.title}}</h5>
+          <p class="card-text">{{coupon.description}}</p>
+        </div>
+        <div class="card-footer">
+          <button type="button" class="btn btn-success float-right ml-1" (click)="openModal(template)">Buy</button>
+          <button type="button" class="btn btn-info text-white float-right" (click)="details(coupon)">Details</button>
+        </div>
+
+        <div class="coupon-price">{{formatPrice(coupon.price)}}</div>
+
+        <ng-template #template>
+          <div class="modal-header">
+            <h4 class="modal-title pull-left">Buy Coupon</h4>
+            <button type="button" class="close pull-right" aria-label="Close" (click)="modalRef.hide()">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+
+          <div class="modal-body">
+            Confirm buy Coupon?
+          </div>
+
+          <div class="modal-footer">
+            <button type="button" class="btn btn-danger" (click)="decline()">No</button>
+            <button type="button" class="btn btn-success" (click)="buyCoupon(coupon.id)">Yes</button>
+          </div>
+        </ng-template>
       </div>
-      <div class="card-footer">
-        <button type="button" class="btn btn-success float-right ml-1" (click)="openModal(template)">Buy</button>
-        <button type="button" class="btn btn-info text-white float-right" (click)="details(coupon)">Details</button>
-      </div>
-
-      <div class="coupon-price">{{formatPrice(coupon.price)}}</div>
-
-      <ng-template #template>
-        <div class="modal-header">
-          <h4 class="modal-title pull-left">Buy Coupon</h4>
-          <button type="button" class="close pull-right" aria-label="Close" (click)="modalRef.hide()">
-            <span aria-hidden="true">&times;</span>
-          </button>
-        </div>
-
-        <div class="modal-body">
-          Confirm buy Coupon?
-        </div>
-
-        <div class="modal-footer">
-          <button type="button" class="btn btn-danger" (click)="decline()">No</button>
-          <button type="button" class="btn btn-success" (click)="buyCoupon(coupon.id)">Yes</button>
-        </div>
-      </ng-template>
     </div>
   </div>
-</div>
+<!--</div>-->
 
 
