--- a/src/app/features/reserved-area/consumer/coupon-details/coupon-details.component.scss
+++ b/src/app/features/reserved-area/consumer/coupon-details/coupon-details.component.scss
@@ -1,9 +1,8 @@
-#yourImage {
-  width: 100%;
-  height: 100%;
+.card-body p {
+  font-size: 15px;
 }
 
-#yourImage img {
-  max-width: 100%;
-  max-height: 100%;
+.card-text {
+  font-size: 18px!important;
 }
+
