--- a/src/app/features/reserved-area/producer/coupon-create/coupon-create.component.html
+++ b/src/app/features/reserved-area/producer/coupon-create/coupon-create.component.html
@@ -119,7 +119,7 @@
             </div>
 
             <div class="form-group row">
-              <label class="col-sm-2 col-form-label">Constraints</label>
+              <label class="col-sm-2 col-form-label">Place</label>
               <div class="col-sm-2">
                 <div class="form-check">
                   <input type="checkbox" class="form-check-input" id="check3" data-md-icheck
