--- a/src/app/features/reserved-area/producer/coupon-list/coupon-list.component.css
+++ b/src/app/features/reserved-area/producer/coupon-list/coupon-list.component.css
@@ -1,19 +1,14 @@
-th{
-
-}
-
 .crop {
   width: 100%;
   height: 70px;
   overflow: hidden !important;
 }
 
+.centered-and-cropped {
+  object-fit: cover
+}
 
-.centered-and-cropped { object-fit: cover }
-
-
-
-p{
+p {
   display: block;
   max-width: 400px;
   height: 109.2px;
@@ -21,11 +16,11 @@ p{
   line-height: 1.4;
   -webkit-line-clamp: 3;
   -webkit-box-orient: vertical;
-  overflow: hidden;
-  text-overflow: ellipsis;
+  /*overflow: hidden;*/
+  /*text-overflow: ellipsis;*/
 }
 
-h5{
+h5 {
   display: block; /* Fallback for non-webkit */
   display: -webkit-box;
   max-width: 400px;
@@ -34,8 +29,7 @@ h5{
   line-height: 1.4;
   -webkit-line-clamp: 3;
   -webkit-box-orient: vertical;
-  overflow: hidden;
-  text-overflow: ellipsis;
-
+  /*overflow: hidden;*/
+  /*text-overflow: ellipsis;*/
 
 }
