--- a/src/app/features/reserved-area/producer/report/coupon-report.component.html
+++ b/src/app/features/reserved-area/producer/report/coupon-report.component.html
@@ -1,59 +1,8 @@
 <h1 class="text-center">Coupons Report</h1>
-<!--<table class="table table-striped">-->
-  <!--<thead>-->
-  <!--<tr>-->
-    <!--<th style="width:10%" class="col">Id</th>-->
-    <!--<th style="width:30%" scope="col">Title</th>-->
-    <!--<th style="width: 5%" scope="col">Price</th>-->
-    <!--<th style="width: 5%" scope="col">State</th>-->
-    <!--<th style="width:20%" scope="col">Quantity Created</th>-->
-    <!--<th style="width:20%" scope="col">Quantity Avariable</th>-->
-    <!--<th style="width:20%" scope="col">Quantity Consumed</th>-->
 
+<h3>Coming soon</h3>
 
-    <!--<th></th>-->
-    <!--<th></th>-->
-  <!--</tr>-->
-  <!--</thead>-->
-
-  <!--<tbody>-->
-  <!--<tr>-->
-    <!--<th scope="row">1</th>-->
-    <!--<td>Mark</td>-->
-    <!--<td>Mark</td>-->
-    <!--<td>Otto</td>-->
-    <!--<td>@mdo</td>-->
-    <!--<td>@mdo</td>-->
-    <!--<td>@mdo</td>-->
-
-
-  <!--</tr>-->
-  <!--<tr>-->
-    <!--<th scope="row">2</th>-->
-    <!--<td>Jacob</td>-->
-    <!--<td>Mark</td>-->
-    <!--<td>Thornton</td>-->
-    <!--<td>@fat</td>-->
-    <!--<td>@mdo</td>-->
-    <!--<td>@mdo</td>-->
-
-
-  <!--</tr>-->
-  <!--<tr>-->
-    <!--<th scope="row">3</th>-->
-    <!--<td>Larry</td>-->
-    <!--<td>Mark</td>-->
-    <!--<td>the Bird</td>-->
-    <!--<td>@twitter</td>-->
-    <!--<td>@mdo</td>-->
-    <!--<td>@mdo</td>-->
-
-
-  <!--</tr>-->
-  <!--</tbody>-->
-<!--</table>-->
-
-
+<!--
 <table class="table table-striped">
   <thead>
     <tr>
@@ -64,3 +13,4 @@
     </tr>
   </thead>
 </table>
+-->
