add button copy coupon running

--- a/src/app/features/reserved-area/producer/coupon-list/coupon-list.component.html
+++ b/src/app/features/reserved-area/producer/coupon-list/coupon-list.component.html
@@ -29,6 +29,9 @@
 
 
       <td>
+        <button type="button" class="btn btn-secondary" (click)="onCopy(coupon)">Copy</button>
+      </td>
+      <td>
         <button type="button" class="btn btn-info" (click)="onEdit(coupon)">Edit</button>
       </td>
       <td>
