--- a/src/app/features/reserved-area/producer/coupon-edit/coupon-edit.component.html
+++ b/src/app/features/reserved-area/producer/coupon-edit/coupon-edit.component.html
@@ -5,8 +5,9 @@
         <div class="card-body p-4">
           <h1 class="text-center">Edit</h1>
           <h4 class="text-muted text-center">Edit Coupon</h4>
+          <form [formGroup]="couponForm" (ngSubmit)="fromEdit === false ? couponCreateCopy(): saveChange()">
 
-          <form [formGroup]="couponForm" (ngSubmit)="saveChange()">
+          <!--<form [formGroup]="couponForm" (ngSubmit)="saveChange()">-->
             <div class="form-group row">
               <label class="col-sm-2 col-form-label">Title</label>
               <div class="col-sm-10">
