--- a/src/app/features/reserved-area/consumer/coupon-details/coupon-details.component.html
+++ b/src/app/features/reserved-area/consumer/coupon-details/coupon-details.component.html
@@ -25,23 +25,23 @@
           </p>
 
           <button class="col-sm-5 btn btn-danger" (click)="retry()">Back</button>
-          <button class="col-sm-5 offset-sm-2 btn btn-success" (click)="openModal(template)">Buy</button>
+          <button class="col-sm-5 offset-sm-2 btn btn-success" (click)="openModal(template)">Add to cart</button>
 
           <ng-template #template>
             <div class="modal-header">
-              <h4 class="modal-title pull-left">Buy Coupon</h4>
+              <h4 class="modal-title pull-left">Add to cart</h4>
               <button type="button" class="close pull-right" aria-label="Close" (click)="modalRef.hide()">
                 <span aria-hidden="true">&times;</span>
               </button>
             </div>
 
             <div class="modal-body">
-              Confirm buy Coupon?
+              Confirm add to cart coupon?
             </div>
 
             <div class="modal-footer">
               <button type="button" class="btn btn-danger" (click)="decline()">No</button>
-              <button type="button" class="btn btn-success" (click)="buy()">Yes</button>
+              <button type="button" class="btn btn-success" (click)="addToCart()">Yes</button>
             </div>
           </ng-template>
 
