--- a/src/app/features/reserved-area/consumer/coupon-showcase/coupon-showcase.component.html
+++ b/src/app/features/reserved-area/consumer/coupon-showcase/coupon-showcase.component.html
@@ -8,30 +8,52 @@
           <p class="card-text">{{coupon.description}}</p>
         </div>
         <div class="card-footer">
-          <button type="button" class="btn btn-success float-right ml-1" (click)="openModal(template)">Buy</button>
+          <button *ngIf="!inCart(coupon.id)" type="button" class="btn btn-success float-right ml-1" (click)="openModal(template)">Add to cart</button>
           <button type="button" class="btn btn-info text-white float-right" (click)="details(coupon)">Details</button>
+          <button type="button" class="btn btn-info text-white float-right" (click)="createOrUpdateCart(coupon)">get storage</button>
+          <button type="button" class="btn btn-info text-white float-right" (click)="setStorage(coupon)">set storage</button>
+          <button type="button" class="btn btn-info text-white float-right" (click)="deleteStorage()">del cart</button>
+          <button type="button" class="btn btn-info text-white float-right" (click)="prove()">prove</button>
         </div>
 
         <div class="coupon-price">{{formatPrice(coupon.price)}}</div>
 
         <ng-template #template>
           <div class="modal-header">
-            <h4 class="modal-title pull-left">Buy Coupon</h4>
+            <h4 class="modal-title pull-left">Add to cart</h4>
             <button type="button" class="close pull-right" aria-label="Close" (click)="modalRef.hide()">
               <span aria-hidden="true">&times;</span>
             </button>
           </div>
 
           <div class="modal-body">
-            Confirm buy Coupon?
+            <p>Confirm add to cart Coupon?</p>
+            <!--<p>Quantity:-->
+            <!--<input type="number"></p>-->
+
+
+            <form>
+              <div class="form-group">
+                <label for="formControlRange">Quantity: Max {{coupon.quantity}}</label>
+                <input  type="range" min="1" max="{{coupon.quantity}}" value="1" class="form-control-range" id="formControlRange" (input)="setQuantity($event.target.value)">
+              <label>Selected: {{quantity}}</label>
+              </div>
+            </form>
+
+
           </div>
 
           <div class="modal-footer">
             <button type="button" class="btn btn-danger" (click)="decline()">No</button>
-            <button type="button" class="btn btn-success" (click)="buyCoupon(coupon.id)">Yes</button>
+            <button type="button" class="btn btn-success" (click)="addToCart(coupon.id)">Yes</button>
           </div>
         </ng-template>
+        <button style="color: #53993b; font-size: 15px;" *ngIf="inCart(coupon.id)" (click)="viewCart()" > in the cart
+          <i class="fas fa-cart-arrow-down" ></i>
+        </button>
       </div>
+
+
     </div>
   </div>
 <!--</div>-->
