add buttons if cart is empty, add buttons Continue to shop in cart, fix bug cart, add icon cart in details, init modal change with input number for quantity

--- a/src/app/features/reserved-area/consumer/coupon-details/coupon-details.component.html
+++ b/src/app/features/reserved-area/consumer/coupon-details/coupon-details.component.html
@@ -12,7 +12,9 @@
           -->
 
           <div class="coupon-price">{{formatPrice(couponPass.price)}}</div>
-
+          <div class="coupon-cart" *ngIf="inCart" (click)="viewCart()">
+            <i class="fas fa-cart-arrow-down" ></i>
+          </div>
           <p class="card-text">{{couponPass.description}}</p>
           <p class="card-text">
             <i class="fas fa-fw  fa-clock text-secondary"></i> {{formatUntil(couponPass.valid_until)}}
