--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -170,6 +170,19 @@ angular-file-uploader div.container {
   text-shadow: 1px 1px 8px black;
 }
 
+.coupon-cart {
+  position: absolute;
+  background-color: #bd0a0d;
+  border-radius: 0 0 0.25rem 0;
+  top: 0;
+  left: 0;
+  font-size: 1.25em;
+  font-weight: bold;
+  padding: 5px 10px;
+  color: white;
+  text-shadow: 1px 1px 8px black;
+}
+
 .coupon-quantity {
   position: center;
   background-color: #bd0754;
