--- a/src/app/features/reserved-area/consumer/cart/cart-show/cart-show.component.html
+++ b/src/app/features/reserved-area/consumer/cart/cart-show/cart-show.component.html
@@ -63,7 +63,11 @@
   </tbody>
 
 </table>
-<button *ngIf="! (cartArray.length  === 0)" type="button" class="btn btn-block btn-success" (click)="openModal(template_buy)">Buy</button>
+<div class="card-body p-4">
+<button  *ngIf="!isEmpty" class="col-sm-5  btn btn-danger" (click)="retry()">Continue to shop</button>
+<button *ngIf="!isEmpty" type="button" class="col-sm-5 offset-sm-2 btn btn-success" (click)="openModal(template_buy)">Buy</button>
+</div>
+
 <ng-template #template_buy>
   <div class="modal-header">
     <h4 class="modal-title pull-left">Buy</h4>
@@ -83,6 +87,10 @@
     <button type="button" class="btn btn-success" (click)="buy(cartArray)">Yes</button>
   </div>
 </ng-template>
-<div *ngIf="isEmpty">
-<img  class="container-fluid" src="assets/img/empty.png"  />
-</div>
+
+  <div *ngIf="isEmpty" class="row">
+    <img class="mx-auto" src="assets/img/empty.png">
+  </div>
+
+<button  *ngIf="isEmpty" class="col-sm-5  btn btn-danger" (click)="retry()">Continue to shop</button>
+<button *ngIf="isEmpty" type="button" class="col-sm-5 offset-sm-2 btn btn-success" (click)="openBought()">Go to your purchases </button>
